# sdrfly

./: LICENSE  README.md  pyproject.toml
apps/: README.md
apps/webapps/btsniffer/: README.md  app.py
apps/webapps/btsniffer/templates/: index.html
apps/webapps/opencv_viewer/: app.py
apps/webapps/opencv_viewer/templates/: index.html
notebooks/: plot_3d_spectrogram.ipynb  plot_fft_waterfall.ipynb  sweep.ipynb
src/sdrfly/: __about__.py  __init__.py  config.json  main.ipynb  plot_utils.py  signal_utils.py  utils.py
src/sdrfly/channelizers/: channelizer_base.py  channelizer_cupy.py  channelizer_fft.py  channelizer_liquiddsp.py  channelizer_numba.py
src/sdrfly/cli/: __init__.py
src/sdrfly/demodulators/: demodulator_base.py  demodulator_cupy.py  demodulator_liquiddsp.py  demodulator_numba.py  gfsk_demod_cupy.py
src/sdrfly/sdr/: sdr_airspy.py  sdr_base.py  sdr_generic.py  sdr_hackrf.py  sdr_rtlsdr.py  sdr_sidekiq.py  sdr_simulated.py
